<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textCurrentSpeed"
        android:layout_width="131dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textCurrentSpeed"
        app:layout_constraintEnd_toStartOf="@+id/dispCurrentSpeed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dispCurrentSpeed"
        android:layout_width="131dp"
        android:layout_height="24dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="47dp"
        android:text="@string/dispCurrentSpeed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textOdometer"
        android:layout_width="131dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textOdometer"
        app:layout_constraintEnd_toStartOf="@+id/dispOdometer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dispOdometer"
        android:layout_width="131dp"
        android:layout_height="24dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="47dp"
        android:text="@string/dispOdometer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textAvgSpeed"
        android:layout_width="131dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textAvgSpeed"
        app:layout_constraintEnd_toStartOf="@+id/dispAvgSpeed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dispAvgSpeed"
        android:layout_width="131dp"
        android:layout_height="24dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="47dp"
        android:text="@string/dispAvgSpeed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginEnd="165dp"
        android:layout_marginBottom="308dp"
        android:onClick="buttonStart"
        android:text="@string/buttonStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>